<resources>
    <string name="app_name">BTL_LTUDDTDD_electricStore</string>
    <string name="tenDangNhap">Tên đăng nhập</string>
    <string name="pass">Mật khẩu</string>
    <string name="gtNam">Nam</string>
    <string name="gtNu">Nữ</string>
    <string name="date">Ngày sinh</string>
    <string name="cmt">Chứng minh nhân dân</string>
    <string name="sdt">Số điện thoại</string>
    <string name="dongY">Đồng ý</string>
    <string name="exit">Thoát</string>
    <string name="tenForm">Đăng ký</string>
    <string name="hoTen">Họ tên</string>
    <string name="dangNhap">Đăng nhập</string>
    <string name="dangky">Đăng ký</string>
    <string name="quenMk">Quên mật khẩu?</string>
    <string name="email">Nhập email</string>
    <string name="bt_chupAnh">Chụp ảnh</string>
    <string name="bt_chonAnh">Chọn ảnh</string>
    <string name="masp">Mã sản phẩm:</string>
    <string name="tensp">Tên sản phẩm:</string>
    <string name="maloai">Mã loại SP:</string>
    <string name="gia">Giá:</string>
    <string name="mota">Mô tả:</string>
    <string name="todo">TODO</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string-array name="cbbmal">
        <item>DT</item>
        <item>LT</item>
    </string-array>
    <string name="titleSpinner">Mã loại</string>
    <string name="thongbao">Bạn có chắc thực hiện điều này không?</string>
    <string name="sanpham">Sản phẩm</string>
    <string name="phone">Phone</string>
    <string name="laptop">Laptop</string>
    <string name="monitor">Monitor</string>
    <string name="headphones">Headphones</string>
    <string name="add_gio_hang">Thêm vào giỏ hàng</string>
    <string name="tennguoibinhluan">Tên người dùng</string>
    <string name="dongchat">dòng hiển thị chat</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="muahang">Mua hàng $</string>
    <string name="tilethongbao">Thông báo</string>
    <string name="tongtien">Tổng cộng:</string>
    <string name="lienhe">Liên hệ admin</string>
    <string name="chat">Gửi tin nhắn</string>
    <string name="goidien">Hotline</string>
    <string name="sanpham_moimua">Lịch sử mua hàng</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="diachi">Địa chỉ</string>
    <string name="xacnhan">Xác nhận mua hàng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="hotennhan">Tên người mua</string>
    <string name="ttsappham">Thông tin sản phẩm</string>
    <string name="choxn">Xác nhận</string>
    <string name="cholh">Lấy hàng</string>
    <string name="danggiao">Đang giao</string>
    <string name="dagiao">Đã giao</string>
    <string name="dahuy">Đã hủy</string>
    <string name="trahang">Trả hàng</string>
    <string name="soluong">Số lượng:</string>
    <string name="mualai">Mua Lại</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is Chanel 1</string>
    <string name="xacnhanhang">Xác nhận</string>
    <string name="huyxacnhan">Hủy xác nhận</string>
    <string name="xacnhandonhang">Xác nhận đơn hàng</string>
    <string name="xacnhangiaohang">Xác nhận giao hàng</string>
    <string name="xacnhantrahang">Xác nhận trả hàng</string>
    <string name="ngayxn">Ngày xác nhận</string>
    <string name="ngaydat">Ngày đặt</string>
    <string name="tinhtrang">Tình trạng</string>
    <string name="danhsachkh">Danh sách khách hàng</string>
    <string name="datlaimk">Đặt lại mật khẩu</string>
    <string name="newpw">Mật khẩu mới</string>
    <string name="oldpw">Mật khẩu cũ</string>
    <string name="laypwd">Lấy mật khẩu</string>
    <string name="traodoi">Hỗ trợ trực tuyến</string>
    <string name="home">Trang chủ</string>
</resources>
