<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profilereturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF7A22"
        app:title="Profile"/>

    <LinearLayout
        android:id="@+id/linear_profile"
        android:background="#FF7A22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_profilereturn"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/user_profile" />

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:id="@+id/txt_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hoTen"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linear_profile"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_arrow"
            android:text="Liên hệ admin"
            android:id="@+id/btn_lienhe_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_chat"
            android:text="@string/chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow"/>

        <Button
            android:id="@+id/btn_hotline"
            android:text="@string/goidien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_lichsu_muahang"
            android:text="@string/sanpham_moimua"
            android:drawableRight="@drawable/ic_arrow"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dat_lai_mk"
            android:text="@string/datlaimk"
            android:drawableRight="@drawable/ic_arrow"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dangxuat_profile"
            android:text="@string/dangxuat"
            android:drawableRight="@drawable/ic_arrow" />
    </LinearLayout>
</RelativeLayout>