<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.lich_su_mua_hang_Activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F5F5F8">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_lichsu"
        android:background="#FF7A22"
        app:title="@string/sanpham_moimua"/>
    <LinearLayout
        android:id="@+id/linner_ls"
        android:layout_below="@+id/toolbar_lichsu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_cho_xac_nhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choxn"
                android:layout_marginBottom="10dp"
                android:background="#FFF"
                android:gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_dang_giao"
                android:text="@string/danggiao"
                android:gravity="center"
                android:background="#FFF"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_da_giao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dagiao"
                android:gravity="center"
                android:background="#FFF"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/txt_tra_hang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trahang"
                android:background="#FFF"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_da_huy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dahuy"
                android:layout_marginBottom="10dp"
                android:background="#FFF"
                android:gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cholh"
                android:textSize="25sp"
                android:background="#FFF"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linner_ls"
        android:id="@+id/lv_lich_su_mua_hang"/>
</RelativeLayout>