<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_quen_mk"
        android:background="#FF7A22"
        app:title="@string/quenMk"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_quen_mk">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:id="@+id/Edit_quen_mk"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laypwd"
            android:id="@+id/btn_layMK"/>
    </LinearLayout>
</RelativeLayout>