<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_doipass"
        android:background="#FF7A22"
        app:title="@string/datlaimk"/>
    <LinearLayout
        android:layout_below="@+id/toolbar_doipass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/Edit_gmail_wd"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mk"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/oldpw"
            android:id="@+id/Edit_pwdold"
            android:drawablePadding="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mk"
            android:drawablePadding="10dp"
            android:hint="@string/pass"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/Edit_pwd1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mk"
            android:drawablePadding="10dp"
            android:hint="@string/pass"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/Edit_pwd2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datlaimk"
            android:layout_margin="10dp"
            android:id="@+id/btn_xn_mkpw"/>
    </LinearLayout>
</RelativeLayout>